fix(quantic): fixed alignment of input when error state is on for numericFacet

--- a/packages/quantic/force-app/main/default/lwc/quanticNumericFacet/quanticNumericFacet.css
+++ b/packages/quantic/force-app/main/default/lwc/quanticNumericFacet/quanticNumericFacet.css
@@ -2,5 +2,11 @@
 
 .facet__search-form {
   display: flex;
+  align-items: flex-start;
+}
+
+.facet__search-btn {
+  min-height: 56px;
+  display: flex;
   align-items: flex-end;
 }
